--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<script type="text/javascript" src="src/pithy.teemplate.js" charset="utf-8"></script>
 	<script type="text/javascript" src="src/pithy.teemplate.helper.js" charset="utf-8"></script>
+	<script type="text/javascript" src="src/pithy.crc32.js" charset="utf-8"></script>
 
 	<title>Pithy.js.teemplate</title>
 	<style type="text/css">
