--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<script type="text/javascript" src="resources/utils.js" charset="utf-8"></script>
+	<script type="text/javascript" src="src/pithy.crc32.js" charset="utf-8"></script>
 	<script type="text/javascript" src="src/pithy.teemplate.js" charset="utf-8"></script>
 	<script type="text/javascript" src="src/pithy.teemplate.helper.js" charset="utf-8"></script>
-	<script type="text/javascript" src="src/pithy.crc32.js" charset="utf-8"></script>
 
 	<title>Pithy.js.teemplate</title>
 	<style type="text/css">
@@ -38,34 +39,6 @@
 	</div>
 
 	<script>
-		function id(id){
-			return document.getElementById(id);
-		}
-		function on(ele, ev, handler, cap){
-			if(typeof ele == 'string'){
-				ele = id(ele);
-			}
-			if(ele.addEventListener){
-				ele.addEventListener(ev, handler, cap===true);
-			}else if(ele.attachEvent){
-				ele.attachEvent("on" + ev, handler);
-			}else{
-				ele["on" + ev] = handler;
-			}
-		};
-		function off_one(ele, ev, handler, cap){
-			if(typeof ele == 'string'){
-				ele = id(ele);
-			}
-			if(ele.removeEventListener){
-				ele.removeEventListener(ev, handler, cap===true);
-			}else if(ele.detachEvent){
-				ele.detachEvent("on" + ev, handler);
-			}else{
-				ele["on" + ev] = null;
-			}
-		}
-
 		var timer = null;
 
 		function stop(){
