--- a/demo.html
+++ b/demo.html
@@ -22,7 +22,7 @@
 
 	<script>
 		var data = {
-			name : 'anlige <a href="">asd</a>',
+			name : 'anlige',
 			age : 23,
 			list : [
 				{date : '1986-9-1', text : 'birthday'},
@@ -41,7 +41,7 @@
 	</script>
 
 	<script type="text/template" id="_template">
-		<div>name = @Html.raw(name)</div>
+		<div>name = @name</div>
 		<div>age = @age</div>
 		<div>4 years later = @(age + 4)</div>
 		<div>sex = @basic.sex</div>
