--- a/demo/htmlhelper.html
+++ b/demo/htmlhelper.html
@@ -3,19 +3,18 @@
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<script type="text/javascript" src="resources/utils.js" charset="utf-8"></script>
-	<script type="text/javascript" src="src/pithy.teemplate.js" charset="utf-8"></script>
-	<script type="text/javascript" src="src/pithy.teemplate.htmlhelper.js" charset="utf-8"></script>
+	<script type="text/javascript" src="../resources/utils.js" charset="utf-8"></script>
+	<script type="text/javascript" src="../src/pithy.ajax.js" charset="utf-8"></script>
+	<script type="text/javascript" src="../src/pithy.teemplate.js" charset="utf-8"></script>
+	<script type="text/javascript" src="../src/pithy.teemplate.helper.js" charset="utf-8"></script>
+	<script type="text/javascript" src="demo.js" charset="utf-8"></script>
 
 	<title>Pithy.js.teemplate / htmlhelper / Demo</title>
-	<style type="text/css">
-		.container {width:100%; display: flex;}
-		.container>div{flex:1; padding-right:20px}
-		.container .result>textarea{width:100%;height:600px; padding:5px;outline:none;resize:none;font-family:'微软雅黑', arial;}
-	</style>
 </head>
 <body>
+	<p id="nav-list"></p>
 	<h2>PjtHtmlhelper示例</h2>
+	<p>PjtExtends需要引用pithy.teemplate.htmlhelper.js文件，文件引用后即自动扩展，不需要调用任何方法</p>
 	<div class="container">
 		<div class="result render-result"><h3>渲染结果</h3><div id="result"></div></div>
 	</div>
@@ -30,7 +29,8 @@
 			var codes = Pjt.compile(id('_template').innerHTML);
 			id('result').innerHTML = Pjt.render(codes, data);
 		}
-		on(window, 'load', __initlize);
+		
+		AJAX.require('../src/pithy.teemplate.htmlhelper.js', __initlize);
 	</script>
 
 	<script type="text/template" id="_template">
