--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<script type="text/javascript" src="resources/utils.js" charset="utf-8"></script>
+	<script type="text/javascript" src="src/pithy.ajax.js" charset="utf-8"></script>
 	<script type="text/javascript" src="src/pithy.teemplate.js" charset="utf-8"></script>
-	<script type="text/javascript" src="src/pithy.teemplate.helper.js" charset="utf-8"></script>
 
 	<title>Pithy.js.teemplate</title>
 	<style type="text/css">
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<h2>Pjt在线测试工具</h2>
-	<p>修改模板和数据内容，自动编译渲染</p>
+	<p>修改模板和数据内容，自动编译渲染。<a href="demo/index.html">所有示例</a></p>
 	<div class="container">
 		<div class="result"><h3>模板</h3><textarea id="template"></textarea></div>
 		<div class="result"><h3>数据</h3><textarea id="data">{
@@ -61,29 +61,31 @@
 			var template = id('template').value;
 			var data_str = id('data').value;
 			
-			var render, appender, data;
-			
-			try{
-				render = PjtHelper.compile(template);
-				show(render.text);
-			}catch(ex){
-				exception('模板编译错误：\n' + ex, 'result-compile');
-				return;
-			}
+			var codes, contents, data;
 			try{
 				data = (new Function('return ' + data_str + ';'))();
 			}catch(ex){
 				exception('数据解析错误：\n' + ex);
 				return;
 			}
+
+			
+			
 			try{
-				appender = render.render(data);
+				codes = Pjt.compile(template);
+				show(codes);
+			}catch(ex){
+				exception('模板编译错误：\n' + ex, 'result-compile');
+				return;
+			}
+			try{
+				contents = Pjt.render(codes, data);
+				id('result').innerHTML = contents;
 			}catch(ex){
 				exception('模板渲染错误：\n' + ex);
 				return;
 			}
 			
-			appender.appendTo('result');
 		}
 		function __initlize(){
 			id('template').value = id('_template').innerHTML.replace(/^\s+|\s+$/gm, '');
