--- a/demo/htmlhelper.html
+++ b/demo/htmlhelper.html
@@ -3,10 +3,10 @@
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<link href="demo.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript" src="../resources/utils.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../src/pithy.ajax.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../src/pithy.teemplate.js" charset="utf-8"></script>
-	<script type="text/javascript" src="../src/pithy.teemplate.helper.js" charset="utf-8"></script>
 	<script type="text/javascript" src="demo.js" charset="utf-8"></script>
 
 	<title>Pithy.js.teemplate / htmlhelper / Demo</title>
