--- a/demo/layouts.html
+++ b/demo/layouts.html
@@ -1,3 +1,4 @@
+@import test
 @* 说实话，看到这么一大堆@符号，我也凌乱了
 
 @* 定义一个布局，用于底部
@@ -18,6 +19,7 @@
 
 @* 主布局
 @layout default-layout
+@include testimport
 <div class="main-layout">
 	<h3>@title</h3>
 
